--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "rework-mixins",
-  "version": "1.1.1",
+  "name": "visionmedia-rework-mixins",
   "description": "Rework CSS mixins",
-  "keywords": ["rework", "css", "preprocessor", "mixins"],
-  "author": "TJ Holowaychuk <tj@vision-media.ca>",
-  "dependencies": {},
-  "devDependencies": {
-    "mocha": "*",
-    "should": "*",
-    "rework": "*"
-  },
-  "main": "index",
-  "scripts": {
-    "test": "mocha --require should --reporter spec"
-  }
+  "version": "1.1.1",
+  "keywords": [
+    "rework",
+    "css",
+    "preprocessor",
+    "mixins"
+  ],
+  "main": "index.js",
+  "dependencies": {}
 }
